# orm-django

./: .gitignore  README.md  pyproject.toml
orm/: __init__.py
