[build-system]
requires = [
    "Django>=4.0.0",
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "orm_django"
version = "0.0.3"
authors = [
  { name="Stamatios Stamou Jr", email="ssjunior@gmail.com" },
]
description = "A package for using Django ORM standalone in scripts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ssjunior/orm-django"
"Bug Tracker" = "https://github.com/ssjunior/orm-django/issues"
